--- a/style.css
+++ b/style.css
@@ -1,70 +1,132 @@
 body {
-    background-color: lightgray;
+    font-family: sans-serif;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    display: grid;
 }
-.logo {
-    display: inline-block;
-    background-color: gray;
-    margin: 20px 50px 10px 50px;
-    width: 1350px;
-    padding: 35px;
-    font-style: initial;
-    font-size: 40px;
-    color: #202020;
+main {
+    width: 100%;
 }
 nav {
-    display: inline-block;
-    background-color: gray;
-    margin: 10px 50px 10px 50px;
-    width: 1380px;
-    padding: 20px;
-    font-style: initial;
-    font-size: 25px;
-    color: #202020;
-    text-align: center;
+    display: flex;
+    width: 100%;
+    background-color: #bebebe;
+    align-items: center;
+    justify-content: space-between;
 }
-header {
-    display: inline-block;
-    background-color: gray;
-    margin: 10px 50px 10px 50px;
-    width: 1300px;
-    padding: 60px;
-    font-style: initial;
-    font-size: 30px;
-    color: #202020;
-    text-align: center;
+.logo {
+    display: flex;
+    margin-left: 150px;
 }
-.side-bar {
-    display: inline-block;
-    background-color: gray;
-    margin: 10px 10px 10px 50px;
-    width: 450px;
-    height: 500px;
-    padding: 25px;
-    font-style: initial;
+.links {
+    display: flex;
+    margin-right: 150px;
+}
+.logo h2 {
+    color: #3f3f3f;
     font-size: 35px;
-    color: #202020;
-    text-align: center;
 }
-.body {
-    display: inline-block;
-    background-color: gray;
-    margin: 10px 20px 10px 10px;
-    width: 855px;
-    height: 510px;
-    padding: 20px;
-    font-style: initial;
-    font-size: 40px;
-    color: #202020;
+.links a {
+    text-decoration: none;
+    color: #3f3f3f;
+    margin-left: 20px;
+    font-size: 20px;
+}
+.hero {
+    display: flex;
+    width: 100%;
+    background-color: #bebebe;
+    justify-content: space-between;
+    padding-bottom: 30px;
+}
+.intro {
+    margin-left: 150px;
+}
+.intro h2 {
+    color: #3f3f3f;
+    font-size: 50px;
+    margin: 0px;
+}
+.intro p {
+    color: #3f3f3f;
+    font-size: 20px;
+    width: 250px;
+}
+.slider {
+    display: flex;
+    margin-right: 150px;
+    background-color: #7f7f7f;
+    padding: 60px;
+    width: 370px;
+    height: 120px;
+    align-items: center;
+}
+.slider p {
+    color: #3f3f3f;
+    font-size: 22px;
+}
+.circles {
+    display: flex;
+    margin: 30px 350px 30px 150px;
+    align-items: center;
+    justify-content: flex-end;
+}
+.circle {
+    background-color: #bebebe;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    margin-left: 10px;
+}
+.box {
+    display: grid;
+    gap: 30px;
+    margin-left: 150px;
+    margin-right: 150px;
+    grid-template-columns: repeat(3, 1fr);
+}
+.services {
+    display: grid;
+    background-color: #bebebe;
+    color: #3f3f3f;
+    align-content: center;
     text-align: center;
+    padding: 150px;
+    font-size: 22px;
+}
+.recent-work {
+    display: grid;
+    background-color: #bebebe;
+    color: #3f3f3f;
+    align-content: center;
+    text-align: center;
+    padding: 150px;
+    font-size: 22px;
+}
+.twitter {
+    display: flex;
+    margin: 30px 150px 30px 150px;
+    background-color: #bebebe;
+    padding: 30px;
+}
+.twitter span {
+    color: #3f3f3f;
+    font-size: 22px;
 }
 footer {
-    display: inline-block;
-    background-color: gray;
-    margin: 10px 50px 10px 50px;
-    width: 1380px;
-    padding: 20px;
-    font-style: initial;
-    font-size: 25px;
-    color: #202020;
-    text-align: center;
+    display: flex;
+    background-color: #bebebe;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 35px;
+    padding-bottom: 35px;
+}
+footer .links {
+    margin-left: 130px;
+}
+footer .copyright {
+    margin-right: 150px;
+    color: #3f3f3f;
+    font-size: 20px;
 }
